modernize stream usage to .toList() and standardize repository variable names